--- a/package.json
+++ b/package.json
@@ -9,5 +9,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "lru-cache": "^11.0.2",
+    "winston": "^3.17.0"
+  }
 }
